--- a/Projekter/MessageBrokerApp/MessageConsumer/MessageConsumer.csproj
+++ b/Projekter/MessageBrokerApp/MessageConsumer/MessageConsumer.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\MessageShared\MessageShared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="9.0.3" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
