--- a/Projekter/MessageBrokerApp/MessageConsumer/MessageConsumer.csproj
+++ b/Projekter/MessageBrokerApp/MessageConsumer/MessageConsumer.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
