--- a/Projekter/MessageBrokerApp/MessageProducer/MessageProducer.csproj
+++ b/Projekter/MessageBrokerApp/MessageProducer/MessageProducer.csproj
@@ -9,6 +9,12 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="appsettings*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
