--- a/Projekter/MessageBrokerApp/MessageConsumer/appsettings.json
+++ b/Projekter/MessageBrokerApp/MessageConsumer/appsettings.json
@@ -7,10 +7,10 @@
     },
     "AllowedHosts": "*",
     "RabbitMq": {
-      "HostName": "rabbitmq" // Brug servicenavnet fra docker-compose
+      "HostName": "rabbitmq" 
     },
     "ConnectionStrings": {
-      // Navnet her ("PostgresDb") er vilkårligt, men bruges i koden til at hente strengen
-      "PostgresDb": "Host=localhost;Port=5433;Username=appuser;Password=secret;Database=messagesdb" // Brug servicenavnet her også
+      
+      "PostgresDb": "Host=localhost;Port=5433;Username=appuser;Password=secret;Database=messagesdb" 
     }
   }
