--- a/Projekter/MessageBrokerApp/MessageProducer/appsettings.json
+++ b/Projekter/MessageBrokerApp/MessageProducer/appsettings.json
@@ -1,13 +1,12 @@
 {
     "Logging": {
       "LogLevel": {
-        "Default": "Information", // Standard log level
+        "Default": "Information", 
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-    "AllowedHosts": "*", // Mest relevant for web-apps, men god at have med
+    "AllowedHosts": "*", 
     "RabbitMq": {
-      "HostName": "rabbitmq" // Vigtigt: Brug servicenavnet fra docker-compose her for fremtidig containerkørsel
-      // Tilføj evt. Port, Username, Password hvis nødvendigt senere
+      "HostName": "rabbitmq" 
     }
   }
