--- a/Projekter/MessageBrokerApp/MessageConsumer/appsettings.json
+++ b/Projekter/MessageBrokerApp/MessageConsumer/appsettings.json
@@ -7,7 +7,8 @@
     },
     "AllowedHosts": "*",
     "RabbitMq": {
-      "HostName": "rabbitmq" 
+      "HostName": "rabbitmq", 
+      "QueueName": "Message-Queue"
     },
     "ConnectionStrings": {
       
